Bug 38445 - [4.4 Regression] ICE in tree-ssa-struct-alias when compiling grub-0.97
Summary: [4.4 Regression] ICE in tree-ssa-struct-alias when compiling grub-0.97
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: tree-optimization (show other bugs)
Version: 4.4.0
: P3 normal
Target Milestone: 4.4.0
Assignee: Richard Biener
URL:
Keywords: ice-on-valid-code
: 38491 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-12-08 15:07 UTC by Bernhard Reutner-Fischer
Modified: 2008-12-12 10:06 UTC (History)
3 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2008-12-08 15:25:30


Attachments
preprocess source (11.73 KB, text/plain)
2008-12-08 15:08 UTC, Bernhard Reutner-Fischer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Reutner-Fischer 2008-12-08 15:07:59 UTC
Using built-in specs.
Target: i686-linux-uclibc
Configured with: /there/src/buildroot.git.pentium4/i686_toolchain/gcc-4.4.0/configure --prefix=/usr --build=i386-pc-linux-gnu --host=i386-pc-linux-gnu --target=i686-linux-uclibc --enable-languages=c,c++ --with-sysroot=/there/src/buildroot.git.pentium4/i686_build/staging --with-build-time-tools=/there/src/buildroot.git.pentium4/i686_build/staging/usr/i686-linux-uclibc/bin --disable-__cxa_atexit --enable-target-optspace --with-gnu-ld --enable-shared --with-gmp=/there/src/buildroot.git.pentium4/i686_toolchain/gmp --with-mpfr=/there/src/buildroot.git.pentium4/i686_toolchain/mpfr --enable-threads --disable-multilib --with-arch=core2 --with-tune=core2 --disable-libssp --disable-libssp --disable-libmudflap --disable-libgomp --enable-decimal-float=no
Thread model: posix
gcc version 4.4.0 20081208 (experimental) [trunk revision 142549] (GCC)
COLLECT_GCC_OPTIONS='-DHAVE_CONFIG_H' '-I.' '-I.' '-I..' '-I../stage1' '-DSUPPORT_LOOPDEV' '-Wall' '-Wmissing-prototypes' '-Wunused' '-Wshadow' '-Wpointer-arith' '-falign-jumps=1' '-falign-loops=1' '-falign-functions=1' '-Wundef' '-nostdinc' '-DSUPPORT_SERIAL=1' '-DSUPPORT_HERCULES=1' '-DSUPPORT_GRAPHICS=1' '-DFSYS_EXT2FS=1' '-DFSYS_FAT=1' '-DFSYS_FFS=1' '-DFSYS_UFS2=1' '-DFSYS_MINIX=1' '-DFSYS_REISERFS=1' '-DFSYS_VSTAFS=1' '-DFSYS_JFS=1' '-DFSYS_XFS=1' '-DFSYS_ISO9660=1' '-DUSE_MD5_PASSWORDS=1' '-Os' '-pipe' '-fno-builtin' '-MT' 'pre_stage2_exec-char_io.o' '-MD' '-MP' '-MF' '.deps/pre_stage2_exec-char_io.Tpo' '-c' '-o' 'pre_stage2_exec-char_io.o' '-v' '-mtune=core2' '-march=core2'
 /there/src/buildroot.git.pentium4/i686_build/staging/usr/bin/../libexec/gcc/i686-linux-uclibc/4.4.0/cc1 -quiet -nostdinc -v -I. -I. -I.. -I../stage1 -iprefix /there/src/buildroot.git.pentium4/i686_build/staging/usr/bin/../lib/gcc/i686-linux-uclibc/4.4.0/ -MD pre_stage2_exec-char_io.d -MF .deps/pre_stage2_exec-char_io.Tpo -MP -MT pre_stage2_exec-char_io.o -DHAVE_CONFIG_H -DSUPPORT_LOOPDEV -DSUPPORT_SERIAL=1 -DSUPPORT_HERCULES=1 -DSUPPORT_GRAPHICS=1 -DFSYS_EXT2FS=1 -DFSYS_FAT=1 -DFSYS_FFS=1 -DFSYS_UFS2=1 -DFSYS_MINIX=1 -DFSYS_REISERFS=1 -DFSYS_VSTAFS=1 -DFSYS_JFS=1 -DFSYS_XFS=1 -DFSYS_ISO9660=1 -DUSE_MD5_PASSWORDS=1 char_io.c -quiet -dumpbase char_io.c -mtune=core2 -march=core2 -auxbase-strip pre_stage2_exec-char_io.o -Os -Wall -Wmissing-prototypes -Wunused -Wshadow -Wpointer-arith -Wundef -version -falign-jumps=1 -falign-loops=1 -falign-functions=1 -fno-builtin -o - |
 /there/src/buildroot.git.pentium4/i686_build/staging/usr/bin/../lib/gcc/i686-linux-uclibc/4.4.0/../../../../i686-linux-uclibc/bin/as -V -Qy -o pre_stage2_exec-char_io.o -
GNU assembler version 2.19 (i686-linux-uclibc) using BFD version (GNU Binutils) 2.19
ignoring duplicate directory "."
#include "..." search starts here:
#include <...> search starts here:
 .
 ..
 ../stage1
End of search list.
GNU C (GCC) version 4.4.0 20081208 (experimental) [trunk revision 142549] (i686-linux-uclibc)
        compiled by GNU C version 4.3.2, GMP version 4.2.4, MPFR version 2.3.2.
warning: GMP header version 4.2.4 differs from library version 4.2.2.
GGC heuristics: --param ggc-min-expand=30 --param ggc-min-heapsize=4096
Compiler executable checksum: 6a40f4131f5176b43bb64e609d95341a
char_io.c: In function ‘grub_sprintf’:
char_io.c:253: warning: dereferencing pointer ‘dataptr’ does break strict-aliasing rules
char_io.c:248: warning: dereferencing pointer ‘dataptr’ does break strict-aliasing rules
char_io.c:253: note: initialized from here
char_io.c:253: note: initialized from here
char_io.c:253: note: initialized from here
char_io.c:253: note: initialized from here
char_io.c:253: note: initialized from here
char_io.c:253: note: initialized from here
char_io.c:253: note: initialized from here
char_io.c:253: note: initialized from here
char_io.c:253: note: initialized from here
char_io.c:253: note: initialized from here
[snip gazillions of these]
char_io.c:253: note: initialized from here
i686-linux-uclibc-gcc: Internal error: Segmentation fault (program cc1)
Please submit a full bug report.


#0  0xb7e18c1e in _IO_default_xsputn_internal () from /lib/i686/cmov/libc.so.6
#1  0xb7deb783 in vfprintf () from /lib/i686/cmov/libc.so.6
#2  0xb7e1308c in vasprintf () from /lib/i686/cmov/libc.so.6
#3  0x0815d96f in build_message_string (msg=0x87e5d1a "%s:%d: %s")
    at /there/src/buildroot.git.pentium4/i686_toolchain/gcc-4.4.0/gcc/diagnostic.c:75
#4  0x0815d9fd in diagnostic_build_prefix (diagnostic=0xbf7b585c)
    at /there/src/buildroot.git.pentium4/i686_toolchain/gcc-4.4.0/gcc/diagnostic.c:158
#5  0x0815db96 in default_diagnostic_starter (context=0x8982020, 
    diagnostic=0xbf7b585c)
    at /there/src/buildroot.git.pentium4/i686_toolchain/gcc-4.4.0/gcc/diagnostic.c:264
#6  0x0815d1a0 in diagnostic_report_diagnostic (context=0x8982020, 
    diagnostic=0xbf7b585c)
    at /there/src/buildroot.git.pentium4/i686_toolchain/gcc-4.4.0/gcc/diagnostic.c:403
#7  0x0815d716 in inform (location=265376, 
    gmsgid=0x8838368 "initialized from here")
    at /there/src/buildroot.git.pentium4/i686_toolchain/gcc-4.4.0/gcc/diagnostic.c:502
#8  0x0847995f in emit_pointer_definition (def=0xb7c04e00)
    at /there/src/buildroot.git.pentium4/i686_toolchain/gcc-4.4.0/gcc/tree-ssa-structalias.c:4724
#9  0x084799c1 in emit_pointer_definition (def=<value optimized out>)
    at /there/src/buildroot.git.pentium4/i686_toolchain/gcc-4.4.0/gcc/tree-ssa-structalias.c:4718
#10 0x084799c1 in emit_pointer_definition (def=<value optimized out>)
    at /there/src/buildroot.git.pentium4/i686_toolchain/gcc-4.4.0/gcc/tree-ssa-structalias.c:4718
#11 0x084799c1 in emit_pointer_definition (def=<value optimized out>)
    at /there/src/buildroot.git.pentium4/i686_toolchain/gcc-4.4.0/gcc/tree-ssa-structalias.c:4718
#12 0x084799c1 in emit_pointer_definition (def=<value optimized out>)
    at /there/src/buildroot.git.pentium4/i686_toolchain/gcc-4.4.0/gcc/tree-ssa-structalias.c:4718
#13 0x084799c1 in emit_pointer_definition (def=<value optimized out>)
    at /there/src/buildroot.git.pentium4/i686_toolchain/gcc-4.4.0/gcc/tree-ssa-structalias.c:4718
#14 0x084799c1 in emit_pointer_definition (def=<value optimized out>)
    at /there/src/buildroot.git.pentium4/i686_toolchain/gcc-4.4.0/gcc/tree-ssa-structalias.c:4718
#15 0x084799c1 in emit_pointer_definition (def=<value optimized out>)
    at /there/src/buildroot.git.pentium4/i686_toolchain/gcc-4.4.0/gcc/tree-ssa-structalias.c:4718
#16 0x084799c1 in emit_pointer_definition (def=<value optimized out>)
    at /there/src/buildroot.git.pentium4/i686_toolchain/gcc-4.4.0/gcc/tree-ssa-structalias.c:4718
[snip gazillions of :4718]
Comment 1 Bernhard Reutner-Fischer 2008-12-08 15:08:39 UTC
Created attachment 16851 [details]
preprocess source
Comment 2 Richard Biener 2008-12-08 15:13:45 UTC
Reducing.
Comment 3 Richard Biener 2008-12-08 15:25:30 UTC
I have a patch.
Comment 4 Richard Biener 2008-12-09 11:06:58 UTC
Fixed.
Comment 5 Richard Biener 2008-12-09 11:07:57 UTC
Subject: Bug 38445

Author: rguenth
Date: Tue Dec  9 11:06:34 2008
New Revision: 142590

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=142590
Log:
2008-12-09  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/38445
	* tree-ssa-structalias.c (emit_pointer_definition): Only visit
	names once.
	(emit_alias_warning): Adjust.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/tree-ssa-structalias.c

Comment 6 Richard Biener 2008-12-12 10:06:13 UTC
*** Bug 38491 has been marked as a duplicate of this bug. ***