re PR tree-optimization/38445 (ICE in tree-ssa-struct-alias when compiling grub-0.97)

2008-12-09  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/38445
	* tree-ssa-structalias.c (emit_pointer_definition): Only visit
	names once.
	(emit_alias_warning): Adjust.

From-SVN: r142590